--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
         "symfony/yaml": "^3.0",
         "symfony/console": "^3.0",
         "fzaninotto/faker": "^1.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Frissr\\": "src/Frissr/"
+        }
     }
 }
