Naam veranderd in alle files

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "frissr/volenteer",
+    "name": "Frissr/Volunteer",
     "description": "Match Vluchtelingen in Nederland aan Vrijwillers in de Buurt.",
     "minimum-stability": "stable",
     "license": "proprietary",
