--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "fzaninotto/faker": "^1.5",
         "phpunit/phpunit": "^5.1"
     },
+    "require_dev": {
+    },
     "autoload": {
         "psr-4": {
             "Frissr\\": "src/Frissr/"
