--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         }
     ],
     "require": {
+        "php": ">=5.5",
         "symfony/yaml": "^3.0",
         "symfony/console": "^3.0",
         "fzaninotto/faker": "^1.5",
-        "phpunit/phpunit": "^5.1"
+        "phpunit/phpunit": "4.8"
     },
     "autoload": {
         "psr-4": {
