--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/yaml": "^3.0",
         "symfony/console": "^3.0",
         "fzaninotto/faker": "^1.5",
-        "phpunit/phpunit": "4.8"
+        "phpunit/phpunit": "4.8",
+        "symfony/dependency-injection": "^3.0"
     },
     "require_dev": {
     },
