--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/console": "^3.0",
         "fzaninotto/faker": "^1.5",
         "phpunit/phpunit": "4.8",
-        "symfony/dependency-injection": "^3.0"
+        "symfony/dependency-injection": "^3.0",
+        "symfony/http-foundation": "^3.0"
     },
     "require_dev": {
     },
