--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "fzaninotto/faker": "^1.5",
         "phpunit/phpunit": "4.8",
         "symfony/dependency-injection": "^3.0",
-        "symfony/http-foundation": "^3.0"
+        "symfony/http-foundation": "^3.0",
+        "symfony/translation": "^3.0"
     },
     "require_dev": {
     },
