--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "symfony/console": "^3.0",
         "fzaninotto/faker": "^1.5",
         "phpunit/phpunit": "4.8",
-        "twig/twig": "^1.23"
+        "twig/twig": "^1.23",
         "symfony/dependency-injection": "^3.0",
         "symfony/http-foundation": "^3.0",
-        "symfony/translation": "^3.0"
+        "symfony/translation": "^3.0",
+        "symfony/templating": "^3.0",
+        "psr/log": "^1.0"
     },
     "require_dev": {
     },
@@ -28,6 +30,6 @@
         }
     },
     "autoload-dev": {
-        "psr-4": { "": "tests/" }    }
-
+        "psr-4": { "": "tests/" }
+    }
 }
