--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/http-foundation": "^3.0",
         "symfony/translation": "^3.0",
         "symfony/templating": "^3.0",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "doctrine/dbal": "^2.5"
     },
     "require_dev": {
     },
