--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/http-foundation": "^3.0",
         "symfony/templating": "^3.0",
         "psr/log": "^1.0",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6"
     },
     "require_dev": {
     },
